compatibility-tests/compile-fail/tests/ui/context-selector-naming.stderr
error: unexpected token, expected `)`
  --> tests/ui/context-selector-naming.rs:14:26
   |
14 | #[snafu(context(name(Bob), suffix(X)))]
   |                          ^
